syntax = "proto3";

package ai.lzy.v1.allocator;

option java_outer_classname = "VmAllocatorPrivateApi";
option java_package = "ai.lzy.v1";

//
// Private api of allocator for allocator agents
//
service AllocatorPrivate {
  // Notify allocator about completed allocation
  rpc Register (RegisterRequest) returns (RegisterResponse);

  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);

}

// ========= Register ==========
message RegisterRequest {
  string vm_id = 1;
  map<string, string> metadata = 3;
}

message RegisterResponse {}

// ========= Heartbeat ==========

message HeartbeatRequest {
  string vm_id = 1;
}

message HeartbeatResponse {}